--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "fastapi>=0.129.0",
     "ipython>=9.10.0",
     "pandas>=3.0.1",
+    "psycopg2-binary>=2.9.11",
+    "python-dotenv>=1.2.1",
     "sqlalchemy>=2.0.46",
     "streamlit>=1.19.0",
     "uvicorn>=0.41.0",
